--- a/2_Indicators.Rmd
+++ b/2_Indicators.Rmd
@@ -133,31 +133,138 @@ series_ids = c("CBBTCUSD",
                "CPIAUCSL",
                "DCOILWTICO",
                "DFF",
+               "ACTLISCOUUS",
                "MORTGAGE30US",
+               "COMPUTSA",
+               "RRVRUSQ156N",
+               "UMCSENT",
                "BAMLH0A0HYM2",
+               "RHORUSQ156N",
                "T10YIE",
+               "HOUST1F",
+               "BAMLH0A0HYM2",
+               "COMPU1USA",
+               "M2V",
+               "BAMLC0A4CBBB",
+               "PCEPI",
+               "AUTHNOTT",
+               "PSAVERT",
+               "RRPONTSYD",
+               "PERMIT",
+               "M1SL",
+               "PERMIT1",
                "T10Y3M",
+               "INDPRO",
+               "BAMLC0A4CBBB",
+               "NFCI",
+               "CORESTICKM159SFRBATL",
+               "PAYEMS",
+               "CIVPART",
+               "MDSP",
+               "M2SL",
                "UNRATE",
+               "AUTHNOT1U",
+               "HOUST",
+               "ICSA",
                "DGS10",
                "CSUSHPINSA",
                "GDP",
                "GDPC1",
                "DFII10",
+               "TDSP",
                "MSPUS")
 
 df_series = rbindlist(lapply(series_ids,function(series_id) {
   fredr::fredr_series_observations(series_id = series_id) %>% 
   dplyr::select(date,value) %>% 
-    dplyr::mutate(series_id=series_id)
+    dplyr::mutate(series_id=series_id) %>% 
+    tidyr::complete(date=seq.Date(from=min(date,na.rm=T),to=Sys.Date(),by="1 day")) %>% 
+    tidyr::fill(value,.direction = "down")  %>% 
+    tidyr::fill(series_id,.direction = "down") 
 }))
 
 combinations = data.frame(t(combn(series_ids,2)))
 combinations = expand.grid(x1=series_ids,
             x2=series_ids) %>% 
   filter(x1!=x2)
+combinations.list <- split(combinations, seq(nrow(combinations)))
 
 ```
 
+
+# Cross correlations
+
+```{r}
+
+calc_ccf = function(data) {
+  ccf_results = ccf(data$value.x,data$value.y,lag.max = 3650,plot = FALSE)
+  best_corr_index = which(abs(ccf_results$acf)==max(abs(ccf_results$acf)))
+  best_corr_time = ccf_results$lag[best_corr_index]
+  best_corr_value = ccf_results$acf[best_corr_index]
+  data.frame(best_corr_time,best_corr_value)
+}
+df_ccfs = combinations %>% 
+  inner_join(df_series,by=c("x1"="series_id")) %>% 
+  inner_join(df_series,by=c("x2"="series_id","date"="date")) %>% 
+  dplyr::select(-date) %>% 
+  na.omit() %>% 
+  group_by(x1,x2) %>% 
+  do(calc_ccf(.))
+
+df_ccfs %>% 
+  ggplot(.,aes(x=best_corr_time,y=best_corr_value)) +
+  geom_point() +
+  geom_vline(xintercept = 0,linetype=2) +
+  geom_hline(yintercept = 0,linetype=2) +
+  scale_y_continuous(limits = c(-1,1),breaks = seq(-1,1,by=0.1)) +
+  scale_x_continuous(breaks = seq(-10,10,by=1)*365,labels=seq(-10,10,by=1))
+```
+
+
+```{r}
+
+df_ccf = df_series %>%
+  filter(series_id %in% c("CSUSHPINSA","MORTGAGE30US")) %>% 
+  spread(series_id,value) %>% 
+  na.omit() %>% 
+  setNames(.,c("Dates","One","Two"))
+ccf_results = ccf(df_ccf$One,df_ccf$Two,lag.max = 3650)
+best_corr_index = which(abs(ccf_results$acf)==max(abs(ccf_results$acf)))
+best_corr_time = ccf_results$lag[best_corr_index]
+best_corr_value = ccf_results$acf[best_corr_index]
+best_corr
+```
+
+```{r}
+
+function(series_1,series_2,time_lag) {
+  
+  df_series %>%
+    filter(series_id %in% c("CSUSHPINSA","MORTGAGE30US")) %>% 
+    dplyr::mutate(date=case_when(series_id==series_1 ~ date+time_lag,
+                                 TRUE ~ date)) %>% 
+    spread(series_id,value) %>% 
+    na.omit() %>% 
+    setNames(.,c("Dates","One","Two")) %>% 
+    lm(One~Two,data=.) %>% 
+    summary(.)
+    predict(.,data.frame(Two=6.5))
+  
+}
+
+df_ccf_lm = df_series %>%
+  filter(series_id %in% c("CSUSHPINSA","MORTGAGE30US")) %>% 
+  spread(series_id,value) %>% 
+  na.omit() %>% 
+  setNames(.,c("Dates","One","Two"))
+ccf_results = ccf(df_ccf$One,df_ccf$Two,lag.max = 3650)
+best_corr_index = which(abs(ccf_results$acf)==max(abs(ccf_results$acf)))
+best_corr_time = ccf_results$lag[best_corr_index]
+best_corr_value = ccf_results$acf[best_corr_index]
+best_corr
+```
+
+# Manual correlation
 
 ```{r}
 
@@ -763,7 +870,8 @@ cicoords_cutoff = cicoords_glm$threshold[2]
 ```{r}
 
 df.extrapolate = df.test
-df.extrapolate$risk = predict(fit.xgBoost,df.extrapolate,type = "prob") %>% pull(Yes) 
+# df.extrapolate$risk = predict(fit.xgBoost,df.extrapolate,type = "prob") %>% pull(Yes) 
+df.extrapolate$risk = predict(fit.glm,df.extrapolate,type = "response") %>% pull(Yes) 
 df.extrapolate$risk_rf = predict(fit.rf,df.extrapolate,type = "prob") %>% pull(Yes) 
 
 ggplot(df.extrapolate,aes(x=date,y=risk)) +
