--- a/4_Housing.Rmd
+++ b/4_Housing.Rmd
@@ -37,30 +37,251 @@ source(file = "money_theme.R")
 ```
 
 ```{r}
-loess_adjust = function(data) {
+gam_adjust = function(data) {
   
-  # grid <- expand.grid(span = seq(0.1, 0.5, len = 5), degree = c(1))
+  grid <- expand.grid(span = seq(0.1, 0.5, len = 10), degree = c(1))
   # fit_gam = suppressWarnings(expr =  { train(y = data$VALUE, 
   #       x = data %>% dplyr::select(DATE),
   #       tuneGrid=grid,
   #       method = "gamLoess") })
   
-  
-  fit_smooth = smooth.spline(x = data$DATE, 
-                             y = data$VALUE, 
-                             all.knots = TRUE, 
-                             control.spar = list(low = -2, hight = 2))
-  
+  fit_smooth = suppressWarnings(expr =  { caret::train(y = data$VALUE, 
+                            x = data %>% dplyr::select(DATE), 
+                            method="gamLoess",
+                            tuneGrid=grid,
+                            trControl=trainControl(method = "repeatedcv",number = 5,repeats = 1)) })
   data %>% 
-    dplyr::mutate(VALUE=fit_smooth$y) %>% 
-    dplyr::mutate(VALUE=scale(VALUE,center=TRUE,scale=TRUE)) %>%
-    dplyr::mutate(ema=TTR::EMA(VALUE,9))
+    dplyr::mutate(VALUE_SMOOTH=predict(fit_smooth,.)) %>% 
+    dplyr::mutate(VALUE_SMOOTH_SCALED=scale(VALUE_SMOOTH,center=TRUE,scale=TRUE)) %>%
+    dplyr::mutate(VALUE_SCALED=scale(VALUE,center=TRUE,scale=TRUE)) %>%
+    dplyr::mutate(VALUE_EMA=TTR::EMA(VALUE,20)) %>% 
+    arrange(desc(DATE)) %>% 
+    dplyr::mutate(VALUE_CHG=VALUE-lead(VALUE)) %>% 
+    filter(!is.na(VALUE_CHG)) %>% 
+    arrange((DATE)) %>% 
+    dplyr::mutate(VALUE_SUM_CHG=cumsum(VALUE_CHG)) %>% 
+    dplyr::mutate(VALUE_SUM_CHG_SCALED=scale(VALUE_SUM_CHG,center=TRUE,scale=TRUE))
   
 }
 ```
 
-# Denmark Housing Supply
+# Construction (DK)
 
+```{r }
+BYGV80_meta <- dst_meta(table = "BYGV80", lang = "da")
+BYGV80 <- dst_get_data(table = "BYGV80", 
+                       BYGFASE="*",
+                       ANVENDELSE="*",
+                       Tid="*",
+                       lang = "da") %>% 
+  group_by(BYGFASE,ANVENDELSE) %>% 
+  arrange(BYGFASE,ANVENDELSE,TID) %>% 
+  filter(ANVENDELSE %in% c("Etageboliger","Parcelhuse")) %>% 
+  dplyr::mutate(ANVENDELSE=gsub("Etageboliger","FLAT",ANVENDELSE)) %>% 
+  dplyr::mutate(ANVENDELSE=gsub("Parcelhuse","HOUSE",ANVENDELSE)) %>% 
+  dplyr::rename(PROPERTY_TYPE=ANVENDELSE) %>% 
+  dplyr::rename(STAT=BYGFASE) %>% 
+  dplyr::rename(DATE=TID) %>% 
+  dplyr::rename(VALUE=value) %>% 
+  group_by(PROPERTY_TYPE,STAT) %>% 
+  dplyr::mutate(PROPERTY_TYPE=recode(PROPERTY_TYPE, 'HOUSE'='Parcel-/rækkehuse', 'FLAT'='Ejerlejlighed')) %>% 
+  do(gam_adjust(.))
+
+BYG1_meta <- dst_meta(table = "BYG1", lang = "da")
+BYG1 <- dst_get_data(table = "BYG1", 
+                       BRANCHE07="*",
+                       SÆSON="*",
+                       ART="*",
+                       Tid="*",
+                       lang = "da") %>% 
+  dplyr::rename(DATE=TID) %>% 
+  dplyr::rename(VALUE=value) %>% 
+  filter(BRANCHE07=="F Bygge og anlæg") %>% 
+  filter(SÆSON=="Sæsonkorrigeret") %>% 
+  filter(ART %in% c("I alt","Nybyggeri og tilbygning i alt","Reparation og vedligeholdelse i alt")) %>% 
+  group_by(BRANCHE07,SÆSON,ART) %>% 
+  arrange(BRANCHE07,SÆSON,ART,DATE) %>% 
+  do(gam_adjust(.))
+
+PRIS90_meta <- dst_meta(table = "PRIS90", lang = "da")
+PRIS90 <- dst_get_data(table = "PRIS90", 
+                       ENHED="*",
+                       BOLTYP="*",
+                       Tid="*",
+                       lang = "da") %>% 
+  dplyr::rename(DATE=TID) %>% 
+  dplyr::rename(VALUE=value) %>% 
+  filter(ENHED=="Indeks") %>% 
+  do(gam_adjust(.))
+
+BYG42_meta <- dst_meta(table = "BYG42", lang = "da")
+BYG42 <- dst_get_data(table = "BYG42", 
+                       HINDEKS="*",
+                       DINDEKS="*",
+                       ART="*",
+                       TAL="*",
+                       Tid="*",
+                       lang = "da") %>% 
+  dplyr::rename(DATE=TID) %>% 
+  dplyr::rename(VALUE=value) %>% 
+  filter(DINDEKS=="Byggeomkostningsindeks i alt") %>% 
+  filter(TAL=="Indeks") %>% 
+  filter(ART %in% c("Materialer","Arbejdsomkostninger")) %>% 
+  group_by( HINDEKS , DINDEKS , ART , TAL ) %>% 
+  do(gam_adjust(.))
+
+```
+
+
+```{r}
+BYGV80 %>% 
+  filter(PROPERTY_TYPE=="Parcel-/rækkehuse") %>% 
+  ggplot(.,aes(x=DATE,y=VALUE_SUM_CHG_SCALED,color=STAT)) +
+  geom_line() + 
+  # facet_wrap(~STAT,scales="free") +
+  # geom_line(aes(y=VALUE_SCALED),alpha=0.3) +
+  theme_money_printer_go_brrr(base_size=12) +
+  geom_hline(yintercept = 0,linetype=2)
+```
+
+```{r}
+df_ccf_BYGV80 = BYGV80 %>% 
+  filter(PROPERTY_TYPE=="Parcel-/rækkehuse") %>% 
+  dplyr::select(STAT,PROPERTY_TYPE,DATE,VALUE_SMOOTH) %>% 
+  spread(STAT,VALUE_SMOOTH)
+ccf_results = ccf(df_ccf_BYGV80$`Tilladt byggeri`,df_ccf_BYGV80$`Fuldført byggeri`,lag.max = 60,plot = FALSE)
+  plot(ccf_results)
+  best_corr_index = which(abs(ccf_results$acf)==max(abs(ccf_results$acf)))
+  ccf_results$lag[best_corr_index]
+  ccf_results$acf[best_corr_index]
+```
+
+```{r}
+
+df_ccf_BYG1 = BYGV80 %>% 
+  filter(STAT=="Fuldført byggeri") %>% 
+  filter(PROPERTY_TYPE=="Parcel-/rækkehuse") %>% 
+  ungroup() %>% 
+  dplyr::select(STAT,DATE,VALUE_SMOOTH) %>% 
+  bind_rows(
+    
+    BYG1 %>% 
+      filter(BRANCHE07=="F Bygge og anlæg") %>% 
+      filter(ART=="I alt") %>% 
+      ungroup() %>% 
+      dplyr::select(ART,DATE,VALUE_SMOOTH) %>% 
+      dplyr::rename(STAT=ART)
+    
+  ) %>% 
+  spread(STAT,VALUE_SMOOTH) %>% 
+  na.omit()
+
+ccf_results = ccf(df_ccf_BYG1$`Fuldført byggeri`,df_ccf_BYG1$`I alt`,lag.max = 60,plot = FALSE)
+  plot(ccf_results)
+  best_corr_index = which(abs(ccf_results$acf)==max(abs(ccf_results$acf)))
+  ccf_results$lag[best_corr_index]
+  ccf_results$acf[best_corr_index]
+
+```
+
+```{r}
+BYGV80 %>% 
+  filter(PROPERTY_TYPE=="Parcel-/rækkehuse") %>% 
+  ggplot(.,aes(x=DATE,y=VALUE_SMOOTH_SCALED,color=STAT)) +
+  geom_line() +
+  geom_line(aes(y=VALUE_SCALED),alpha=0.3) +
+  theme_money_printer_go_brrr(base_size=12)
+```
+
+
+```{r }
+BYG1 %>%
+  ggplot(.,aes(x=DATE,y=VALUE_SMOOTH_SCALED,color=ART)) +
+  geom_point(aes(y=VALUE_SCALED)) +
+  geom_smooth(span=0.17) +
+  theme(legend.position = "bottom") +
+  geom_hline(yintercept = 0,linetype=2)  +
+  theme_money_printer_go_brrr(base_size=12) +
+  labs(title="Denmark: Construction Employment",
+       x=NULL,
+       y="(SD)",
+       caption = timestamp_caption())
+  
+```
+
+
+```{r}
+
+BYGV80 %>% 
+  filter(PROPERTY_TYPE=="Parcel-/rækkehuse") %>% 
+  dplyr::select(PROPERTY_TYPE,STAT,DATE,VALUE_SMOOTH) %>% 
+  spread(STAT,VALUE_SMOOTH)
+
+BYGV80 %>% 
+  filter(PROPERTY_TYPE %in% c("Parcel-/rækkehuse")) %>% 
+  group_by(STAT) %>% 
+  arrange(STAT,DATE)  %>% 
+  filter(STAT %in% c("Tilladt byggeri","Fuldført byggeri","Påbegyndt byggeri","Byggeri under opførelse")) %>% 
+  dplyr::mutate(VALUE_SMOOTH=cumsum(VALUE_SMOOTH)) %>% 
+  dplyr::select(PROPERTY_TYPE,STAT,DATE,VALUE_SMOOTH) %>% 
+  spread(STAT,VALUE_SMOOTH) %>% 
+  dplyr::mutate(backlogTP=`Tilladt byggeri`-`Påbegyndt byggeri`) %>% 
+  dplyr::mutate(backlogTF=`Tilladt byggeri`-`Fuldført byggeri`) %>% 
+  dplyr::mutate(backlogPF=`Påbegyndt byggeri`-`Fuldført byggeri`) %>% 
+  # dplyr::mutate(backlogTB=`Byggeri under opførelse`-`Fuldført byggeri`) %>% 
+  gather(backlog_type,backlog_value,backlogTP,backlogTF,backlogPF) %>% 
+  # dplyr::mutate(backlog=scale(backlog,center=TRUE,scale=TRUE)) %>% 
+  ggplot(.,aes(x=DATE,y=backlog_value,color=backlog_type)) +
+  geom_point(size=0.7) +
+  # geom_smooth(span=0.25) +
+  theme(legend.position = "bottom") +
+  geom_hline(yintercept = 0,linetype=2) +
+  theme_money_printer_go_brrr(base_size=12) +
+  geom_vline(xintercept = c(ymd("2005-04-01","2021-01-01"))) +
+  geom_vline(xintercept = c(ymd("2007-06-01","2022-03-31")),linetype=3) +
+  labs(title="Denmark: Backlog of Construction (Permits % Completed)",
+       x=NULL,
+       y="(SD)",
+       caption = timestamp_caption()) +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y")
+
+```
+
+
+```{r}
+
+
+
+df_fp = BYGV80 %>% 
+  filter(PROPERTY_TYPE %in% c("Parcel-/rækkehuse")) %>% 
+  group_by(STAT) %>% 
+  arrange(STAT,DATE)  %>% 
+  filter(STAT %in% c("Tilladt byggeri","Fuldført byggeri","Påbegyndt byggeri","Byggeri under opførelse")) %>% 
+  dplyr::mutate(VALUE_SMOOTH=cumsum(VALUE)) %>% 
+  dplyr::select(PROPERTY_TYPE,STAT,DATE,VALUE_SMOOTH) %>% 
+  spread(STAT,VALUE_SMOOTH) %>% 
+  dplyr::mutate(backlogTF=`Tilladt byggeri`-`Fuldført byggeri`) %>% 
+  # filter(DATE>=ymd("2021-04-01"))  %>% 
+  filter(DATE>=ymd("2022-01-01")) 
+
+# lm_poly2 = lm(df_fp$backlogTF ~ poly(df_fp$DATE,2))
+lm_poly2 = lm( backlogTF ~ poly(DATE,2) ,data=df_fp)
+summary(lm_poly2)
+
+df_fp_extrapolate = data.frame(DATE=seq(ymd("2021-02-01"),ymd("2024-01-01"),by="1 month")) %>% 
+  dplyr::mutate(backlogTF=predict(lm_poly2,.))
+
+
+ df_fp %>% 
+  ggplot(.,aes(x=DATE,y=backlogTF)) +
+  geom_point() +
+  geom_hline(yintercept = 0,linetype=2)  +
+  geom_vline(xintercept = ymd("2023-05-01")) +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y",limits = c(ymd("2020-01-01"),ymd("2025-01-01"))) +
+  geom_line(data=df_fp_extrapolate,aes(x=DATE,y=backlogTF))
+```
+
+# Denmark Housing Supply
 
 ```{r}
 df_udbud =
@@ -140,7 +361,10 @@ df.house_prices =
   dplyr::mutate(DATE=lubridate::ceiling_date(as.Date(as.yearqtr(DATE, format = "%YK%q")),"quarters")-days(1)) %>% 
   group_by(PROPERTY_TYPE,SALES_TYPE,ZIP) %>% 
   # do(loess_adjust(.)) %>% 
-  dplyr::mutate(PROPERTY_TYPE=recode(PROPERTY_TYPE, 'HOUSE'='Parcel-/rækkehuse', 'FLAT'='Ejerlejlighed'))
+  dplyr::mutate(PROPERTY_TYPE=recode(PROPERTY_TYPE,
+                                     'HOUSE'='Parcel-/rækkehuse',
+                                     'Parcel-/rækkehus'='Parcel-/rækkehuse',
+                                     'FLAT'='Ejerlejlighed'))
 
 ```
 
@@ -162,32 +386,6 @@ df_liggetider =
 
 ```
 
-
-```{r }
-
-BYGV80_meta <- dst_meta(table = "BYGV80", lang = "da")
-BYGV80 <- dst_get_data(table = "BYGV80", 
-                       BYGFASE="*",
-                       ANVENDELSE="*",
-                       Tid="*",
-                       lang = "da")
-df_BYGV80 = 
-  BYGV80 %>% 
-  group_by(BYGFASE,ANVENDELSE) %>% 
-  arrange(BYGFASE,ANVENDELSE,TID) %>% 
-  filter(ANVENDELSE %in% c("Etageboliger","Parcelhuse")) %>% 
-  dplyr::mutate(ANVENDELSE=gsub("Etageboliger","FLAT",ANVENDELSE)) %>% 
-  dplyr::mutate(ANVENDELSE=gsub("Parcelhuse","HOUSE",ANVENDELSE)) %>% 
-  dplyr::rename(PROPERTY_TYPE=ANVENDELSE) %>% 
-  dplyr::rename(STAT=BYGFASE) %>% 
-  dplyr::rename(DATE=TID) %>% 
-  dplyr::rename(VALUE=value) %>% 
-  group_by(PROPERTY_TYPE,STAT) %>% 
-  dplyr::mutate(PROPERTY_TYPE=recode(PROPERTY_TYPE, 'HOUSE'='Parcel-/rækkehuse', 'FLAT'='Ejerlejlighed')) %>% 
-  dplyr::mutate(INDEX=scale(VALUE,center = TRUE,scale = TRUE)) %>% 
-  na.omit()
-
-```
 
 
 ```{r}
@@ -226,7 +424,7 @@ df.adjustments =
   dplyr::mutate(VALUE=as.integer(VALUE)) %>% 
   unite(SALES_TYPE,SALES_TYPE,PROPERTY_TYPE) %>% 
   spread(SALES_TYPE,VALUE) %>% 
-  dplyr::mutate(ADJUST_HOUSE=(`Realiseret handelspris_Parcel-/rækkehus`/`Første udbudspris_Parcel-/rækkehus`)-1) %>% 
+  dplyr::mutate(ADJUST_HOUSE=(`Parcel-/rækkehus_Realiseret handelspris`/`Parcel-/rækkehus_Første udbudspris`)-1) %>% 
   # dplyr::mutate(ADJUST_FLAT=(`Realiseret handelspris_FLAT`/`Første udbudspris_FLAT`)-1) %>% 
   dplyr::select(ZIP,DATE,ADJUST_HOUSE) %>% 
   gather(ADJUST_TYPE,VALUE,ADJUST_HOUSE) %>% 
@@ -242,13 +440,14 @@ df.adjustments =
 
 ### All time development
 
-```{r}
+```{r fig.height=20,fig.width=10}
 
 df.adjustments %>% 
   bind_rows( df.house_prices ) %>% 
   bind_rows( df_liggetider ) %>% 
   bind_rows( df_interest ) %>% 
   bind_rows( df_BYGV80 ) %>% 
+  filter(!PROPERTY_TYPE=="Ejerlejlighed") %>%
   ggplot(.,aes(x=DATE,y=INDEX,color=STAT)) +
   geom_smooth(fill=NA,span=0.03) +
   facet_wrap(~PROPERTY_TYPE,ncol=1) +
@@ -265,11 +464,12 @@ df.adjustments %>%
 ```{r}
 
 df_BYGV80 %>% 
-  ggplot(.,aes(x=DATE,y=INDEX,color=STAT)) +
-  geom_line(color="gray30") +
-  geom_smooth(fill=NA) +
+  filter(!PROPERTY_TYPE=="Ejerlejlighed") %>%
+  ggplot(.,aes(x=DATE,y=VALUE_SCALED,color=STAT)) +
+  geom_line() +
+  geom_smooth(fill=NA,span=0.1) +
   facet_wrap(~PROPERTY_TYPE,ncol=1) +
-  geom_smooth(data=df_udbud,aes(x=DATE,y=VALUE),color="blue",linetype=2)  +
+  geom_smooth(data=df_udbud,aes(x=DATE,y=VALUE),color="blue",linetype=2,span=0.1)  +
   scale_x_date(date_breaks = "1 year",date_labels = "%Y",limits=c(dmy("2004-01-01"),dmy("2008-01-01"))) + 
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
   theme(legend.position="bottom") +
@@ -281,11 +481,99 @@ df_BYGV80 %>%
 ```
 
 ```{r}
-ggplot(df_udbud,aes(x=DATE,y=VALUE,color=ZIP)) +
-  geom_line(alpha=0.3) +
-  facet_wrap(~PROPERTY_TYPE) +
+df_udbud %>% 
+  ggplot(.,aes(x=DATE,y=VALUE,color=ZIP)) +
+  geom_line() +
+  facet_wrap(~PROPERTY_TYPE+SUPPLY_TYPE) +
   theme_money_printer_go_brrr(base_size=12) 
 ```
+### Recent developments
+
+```{r fig.width=20,fig.height=20}
+df_BYGV80 %>% 
+  filter(PROPERTY_TYPE=="Parcel-/rækkehuse") %>% 
+  # filter(DATE>=Sys.Date()-years(10)) %>% 
+  ggplot(.,aes(x=DATE,y=VALUE_SMOOTH,color=STAT)) +
+  geom_line() +
+  geom_point(aes(y=VALUE,color=STAT)) +
+  # geom_point() +
+  facet_wrap(~STAT,scales="free") +
+  theme(legend.position="bottom",
+        axis.text.x=element_text(angle=45,hjust=1)) +
+  scale_y_continuous(labels = scales::number_format(big.mark=" ")) +
+  # scale_x_date(date_breaks = "6 months",date_labels = "%Y %b")  +
+  scale_x_date(date_breaks = "2 years",date_labels = "%Y %b")  +
+  # geom_vline(xintercept = seq.Date(from = dmy("01-01-2000"),to = dmy("01-01-2030"),by = "1 year"),linetype=2,alpha=0.7)  +
+  # geom_vline(xintercept = seq.Date(from = dmy("01-08-2000"),to = dmy("01-08-2030"),by = "1 year"),linetype=2,alpha=0.8) +
+  theme_money_printer_go_brrr(base_size=16) 
+```
+
+```{r fig.width=15,fig.height=10}
+df_BYGV80 %>% 
+  filter(PROPERTY_TYPE=="Parcel-/rækkehuse") %>% 
+  filter(DATE>=Sys.Date()-years(5)) %>% 
+  ggplot(.,aes(x=DATE,y=VALUE,color=STAT)) +
+  geom_line() +
+  geom_point() +
+  facet_wrap(~STAT,scales="free") +
+  theme(legend.position="bottom") +
+  scale_y_continuous(labels = scales::number_format(big.mark=" ")) +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  theme_money_printer_go_brrr(base_size=16) 
+```
+
+
+```{r fig.width=15,fig.height=10}
+df_BYGV80 %>% 
+  filter(PROPERTY_TYPE=="Parcel-/rækkehuse") %>% 
+  group_by(STAT) %>% 
+  dplyr::mutate(VALUE=lead(VALUE)-VALUE) %>% 
+  ggplot(.,aes(x=DATE,y=VALUE,color=STAT)) +
+  geom_line() +
+  geom_point() +
+  facet_wrap(~STAT,scales="free") +
+  theme(legend.position="bottom") +
+  scale_y_continuous(labels = scales::number_format(big.mark=" ")) +
+  geom_hline(yintercept = 0) +
+  theme_money_printer_go_brrr(base_size=16) 
+```
+
+### Permits and house prices
+
+```{r}
+df.house_prices %>% 
+  filter(ZIP=="Hele landet") %>% 
+  dplyr::rename(STAT=SALES_TYPE) %>% 
+  filter(STAT=="Realiseret handelspris") %>% 
+  dplyr::mutate(MoMchange=VALUE/lag(VALUE)) %>% 
+  dplyr::mutate(INDEX=scale(MoMchange)) %>% 
+ 
+  bind_rows( df_BYGV80 ) %>% 
+  # bind_rows( df.adjustments )
+  filter(PROPERTY_TYPE=="Parcel-/rækkehuse") %>% 
+  filter(STAT %in% c("Tilladt byggeri","Realiseret handelspris")) %>% 
+  ggplot(.,aes(x=DATE,y=INDEX,color=STAT)) +
+  geom_line() +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  theme_money_printer_go_brrr(base_size=16) +
+  geom_hline(yintercept = 0)
+
+
+# df_cor_price_tilladelse = df.house_prices %>% 
+#   filter(ZIP=="Hele landet") %>% 
+#   dplyr::rename(STAT=SALES_TYPE) %>% 
+#   dplyr::mutate(VALUE=VALUE/lag(VALUE)) %>% 
+#   dplyr::mutate(INDEX=scale(VALUE)) %>% 
+#   bind_rows( df_BYGV80 ) %>% 
+#   filter(STAT %in% c("Tilladt byggeri","Realiseret handelspris")) %>% 
+#   filter(PROPERTY_TYPE=="Parcel-/rækkehuse") %>% 
+#   spread(STAT,INDEX) %>% 
+#   na.omit()
+# plot(df_cor_price_tilladelse$VALUE,df_cor_price_tilladelse$`Realiseret handelspris`)
+# cor( df_cor_price_tilladelse$MoMchange , df_cor_price_tilladelse$`Realiseret handelspris` )
+
+```
+
 ### COVID 19 lows
 
 ```{r}
@@ -434,7 +722,7 @@ BYGV80 %>%
   dplyr::mutate(value=cumsum(value)) %>% 
   spread(BYGFASE,value) %>% 
   dplyr::mutate(backlog=`Tilladt byggeri`-`Fuldført byggeri`) %>% 
-  dplyr::mutate(backlog=scale(backlog,center=TRUE,scale=TRUE)) %>% 
+  # dplyr::mutate(backlog=scale(backlog,center=TRUE,scale=TRUE)) %>% 
   ggplot(.,aes(x=TID,y=backlog,color=ANVENDELSE)) +
   geom_point(size=0.7) +
   # geom_smooth(span=0.25) +
@@ -460,7 +748,7 @@ BYGV80 %>%
   # dplyr::mutate(value=cumsum(value)) %>% 
   spread(BYGFASE,value) %>% 
   dplyr::mutate(backlog=`Byggeri under opførelse`-`Fuldført byggeri`) %>% 
-  dplyr::mutate(backlog=scale(backlog,center=TRUE,scale=TRUE)) %>% 
+  # dplyr::mutate(backlog=scale(backlog,center=TRUE,scale=TRUE)) %>% 
   ggplot(.,aes(x=TID,y=backlog,color=ANVENDELSE)) +
   geom_point(size=0.7) +
   # geom_smooth(span=0.25) +
@@ -479,36 +767,6 @@ BYGV80 %>%
 ```
 
 ## Construction Employment
-
-```{r }
-BYG1_meta <- dst_meta(table = "BYG1", lang = "da")
-BYG1 <- dst_get_data(table = "BYG1", 
-                       BRANCHE07="*",
-                       SÆSON="*",
-                       ART="*",
-                       Tid="*",
-                       lang = "da")
-
-BYG1 %>% 
-  filter(BRANCHE07=="F Bygge og anlæg") %>% 
-  filter(SÆSON=="Sæsonkorrigeret") %>% 
-  filter(ART %in% c("I alt","Nybyggeri og tilbygning i alt","Reparation og vedligeholdelse i alt")) %>% 
-  group_by(BRANCHE07,SÆSON,ART) %>% 
-  arrange(BRANCHE07,SÆSON,ART,TID) %>% 
-  # dplyr::mutate(index=100*value/first(value)) %>% 
-  dplyr::mutate(value=scale(value,center=TRUE,scale = TRUE)) %>% 
-  ggplot(.,aes(x=TID,y=value,color=ART)) +
-  geom_point(size=0.3) +
-  geom_smooth(span=0.17) +
-  theme(legend.position = "bottom") +
-  geom_hline(yintercept = 0,linetype=2)  +
-  theme_money_printer_go_brrr(base_size=12) +
-  labs(title="Denmark: Construction Employment",
-       x=NULL,
-       y="(SD)",
-       caption = timestamp_caption())
-  
-```
 
 # Denmark House Prices
 
@@ -546,7 +804,7 @@ coefs = function(data) {
 }
 
 df_increase = df %>% 
-  filter(SALES_TYPE=="Realiseret handelspris") %>% 
+  filter(PROPERTY_TYPE=="Realiseret handelspris") %>% 
   filter(VALUE>0) %>% 
   group_by(PROPERTY_TYPE,ZIP) %>% 
   do(coefs(data = .)) %>% 
@@ -601,13 +859,13 @@ coefs_total = function(data) {
 df_increase_dec_2019 = df %>% 
   filter(DATE>=ymd("2020-03-11")) %>%
   # filter(PROPERTY_TYPE=="HOUSE") %>% 
-  filter(SALES_TYPE=="Realiseret handelspris") %>% 
+  filter(PROPERTY_TYPE=="Realiseret handelspris") %>% 
   filter(VALUE>0) %>% 
-  group_by(ZIP,PROPERTY_TYPE) %>% 
+  group_by(ZIP,SALES_TYPE) %>% 
   do(coefs_total(data = .)) %>% 
   arrange(desc(t0)) %>%  
   arrange(t0) %>% 
-  dplyr::mutate(ZIP=factor(ZIP,levels=.$ZIP)) 
+  dplyr::mutate(ZIP=factor(ZIP,levels=unique(.$ZIP)))
 
 df_increase_dec_2019 %>% 
   ggplot(.,aes(x=ZIP,y=t0)) +
@@ -1103,6 +1361,7 @@ df_m2price %>%
   bind_rows(df_supply) %>%
   bind_rows(df_wait) %>% 
   bind_rows(df_BYGV80) %>% 
+  filter(ZIP=="Lyngby-Taarbæk") %>% 
   filter(STAT %in% c("Liggetider (dage)","Realiseret handelspris")) %>% 
   group_by(PROPERTY_TYPE,STAT) %>% 
   dplyr::mutate(scale_=scale(VALUE,center = TRUE,scale = TRUE)) %>% 
@@ -1127,6 +1386,7 @@ df_m2price %>%
   bind_rows(df_supply) %>%
   bind_rows(df_wait) %>% 
   bind_rows(df_BYGV80) %>% 
+  filter(ZIP=="Lyngby-Taarbæk") %>% 
   filter(STAT %in% c("Liggetider (dage)","Udbudte boliger")) %>% 
   group_by(PROPERTY_TYPE,STAT) %>% 
   dplyr::mutate(scale_=scale(VALUE,center = TRUE,scale = TRUE)) %>% 
@@ -1151,6 +1411,7 @@ df_m2price %>%
   bind_rows(df_supply) %>%
   bind_rows(df_wait) %>% 
   bind_rows(df_BYGV80) %>% 
+  filter(ZIP=="Lyngby-Taarbæk") %>% 
   filter(STAT %in% c("Udbudte boliger","Realiseret handelspris")) %>% 
   group_by(PROPERTY_TYPE,STAT) %>% 
   dplyr::mutate(scale_=scale(VALUE,center = TRUE,scale = TRUE)) %>% 
@@ -1175,6 +1436,7 @@ df_m2price %>%
 df_m2price %>% 
   bind_rows(df_supply) %>%
   bind_rows(df_wait) %>% 
+  filter(ZIP=="Hele landet") %>% 
   bind_rows(df_BYGV80) %>% 
   filter(STAT %in% c("Udbudte boliger","Byggeri under opførelse")) %>% 
   group_by(PROPERTY_TYPE,STAT) %>% 
@@ -1201,7 +1463,8 @@ df_m2price %>%
   bind_rows(df_supply) %>%
   bind_rows(df_wait) %>% 
   bind_rows(df_BYGV80) %>% 
-  bind_rows(df_interest) %>% 
+  filter(ZIP=="Hele landet") %>% 
+  bind_rows(df_interest %>% gather(STAT,VALUE,Kort.rente:CurveLongShort) %>% dplyr::rename(DATE=Date)) %>% 
   filter(STAT %in% c("Kort.rente","Realiseret handelspris")) %>% 
   group_by(PROPERTY_TYPE,STAT) %>% 
   dplyr::mutate(scale_=scale(VALUE,center = TRUE,scale = TRUE)) %>% 
@@ -1248,25 +1511,32 @@ df_m2price %>%
 # Denmark: Building Occupation
 
 ```{r }
-BOL101_meta <- dst_meta(table = "BOL101", lang = "da")
-BOL101 <- dst_get_data(table = "BOL101", 
-                       OMRÅDE=c("Hele landet","Lyngby-Taarbæk"),
-                       BEBO=c("Boliger med CPR tilmeldte personer (beboede boliger)",
-                              "Boliger uden CPR tilmeldte personer (ubeboede boliger)"),
-                       ANVENDELSE=c("Parcel/Stuehuse",
-                                    "Række-, kæde- og dobbelthuse",
-                                    "Etageboliger"),
-                       UDLFORH=c("Beboet af ejer",
-                                 "Beboet af lejer",
-                                 "Ikke benyttet bolig"),
-                       EJER=c("Privatpersoner inkl I/S",
-                              "Almene boligselskaber",
-                              "A/S, ApS og andre selskaber"),
+BOL102_meta <- dst_meta(table = "BOL102", lang = "da")
+BOL102 <- dst_get_data(table = "BOL102", 
+                       AMT="*",
+                       BEBO="*",
+                       ANVENDELSE="*",
                        OPFØRELSESÅR="*",
+                       OPVARMNING="*",
+                       TOILET="*",
+                       BAD="*",
+                       KOEKKEN="*",
                        Tid="*",
                        lang = "da")
 
 ```
+
+```{r}
+BOL101 %>% 
+  filter(OMRÅDE=="Hele landet") %>% 
+  filter(BEBO=="Boliger uden CPR tilmeldte personer (ubeboede boliger)") %>% 
+  filter(ANVENDELSE=="Parcel/Stuehuse") %>% 
+  group_by( OMRÅDE , BEBO , ANVENDELSE , TID) %>% 
+  dplyr::summarize(count=sum(value)) %>% 
+  ggplot(.,aes(x=TID,y=count)) +
+  geom_line()
+```
+
 
 ```{r}
 
@@ -1403,4 +1673,108 @@ df_m2price %>%
        )
 
 ```
+
+
+# Twin Peaks
+
+```{r}
+# EJ5
+EJ5_meta <- dst_meta(table = "EJ5", lang = "da")
+EJ5 <- dst_get_data(table = "EJ5", 
+                       EJENDOMSKATE="Enfamiliehuse",
+                       TAL="Indeks",
+                       Tid="*",
+                       lang = "da") %>% 
+  dplyr::mutate(series_id=EJ5_meta$basics$id) %>% 
+  tidyr::complete(TID = seq.Date(from = min(TID,na.rm=T), to = max(TID,na.rm=T), by="day")) %>% 
+  tidyr::fill(value,.direction="downup")  %>% 
+  tidyr::fill(TAL,.direction="downup")   %>% 
+  tidyr::fill(EJENDOMSKATE,.direction="downup")    %>% 
+  tidyr::fill(series_id,.direction="downup") %>% 
+  dplyr::rename(date=TID,
+                value=value)
+
+# BYGV80
+BYGV80_meta <- dst_meta(table = "BYGV80", lang = "da")
+BYGV80 <- dst_get_data(table = "BYGV80", 
+                       ANVENDELSE="*",
+                       BYGFASE="*",
+                       Tid="*",
+                       lang = "da") %>% 
+  filter(ANVENDELSE %in% c("Parcelhuse","Række-, kæde- og dobbelthuse")) %>% 
+  group_by(BYGFASE,TID) %>% 
+  dplyr::summarize(value=sum(value,na.rm=T)) %>% 
+  ungroup() %>% 
+  dplyr::mutate(ANVENDELSE="Enfamiliehus") %>% 
+  dplyr::mutate(series_id=BYGV80$basics$id) %>% 
+  tidyr::complete(TID = seq.Date(from = min(TID,na.rm=T), to = max(TID,na.rm=T), by="day")) %>% 
+  tidyr::fill(value,.direction="downup")  %>% 
+  tidyr::fill(ANVENDELSE,.direction="downup")    %>% 
+  tidyr::fill(BYGFASE,.direction="downup")    %>% 
+  tidyr::fill(series_id,.direction="downup") %>% 
+  dplyr::rename(date=TID,
+                value=value)
+
+# %>% 
+  dplyr::mutate(series_id=EJ5_meta$basics$id) %>% 
+  tidyr::complete(TID = seq.Date(from = min(TID,na.rm=T), to = max(TID,na.rm=T), by="day")) %>% 
+  tidyr::fill(value,.direction="downup")  %>% 
+  tidyr::fill(TAL,.direction="downup")   %>% 
+  tidyr::fill(EJENDOMSKATE,.direction="downup")    %>% 
+  tidyr::fill(series_id,.direction="downup") %>% 
+  dplyr::rename(date=TID,
+                value=value)
+```
+
+
+```{r}
+# Loop
+df_CSUSHPINSA = do.call("rbind",list(EJ5)) %>% 
+  crossing(data.frame(peak=c("2007","2022"),
+           peak_date=c(ymd("2007-07-01",ymd("2022-04-01"))))) %>% 
+  filter(date>=peak_date-years(3)) %>% 
+  filter(date<=peak_date+years(7)) %>% 
+  arrange(peak,peak_date,date) %>% 
+  group_by(peak,series_id) %>% 
+  arrange(peak,series_id,date) %>% 
+  dplyr::mutate(index=ifelse(date==peak_date,value,NA),
+                index_diffdate=date-peak_date) %>% 
+  dplyr::mutate(label=ifelse(index_diffdate==max(index_diffdate),series_id,NA)) %>% 
+  tidyr::fill(index,.direction = "updown") %>% 
+  dplyr::mutate(index=100*value/index)
+
+```
+
+
+```{r}
+df_CSUSHPINSA %>% 
+  ggplot(.,aes(x=index_diffdate,y=index,color=series_id)) +
+  geom_line() +
+  # facet_wrap(~peak,ncol=1,scales="free_x") +
+  facet_wrap(~peak,ncol=1,scales="free_y") +
+  # geom_text_repel(aes(label=label),nudge_x = 0, direction = "y", hjust = "left") +
+  geom_text(aes(label=label),nudge_x = 0, direction = "y", hjust = "left") +
+  geom_hline(yintercept = 100,linetype=2) +
+  geom_vline(xintercept = 0,linetype=2) +
+  scale_x_continuous(expand=expansion(add=c(0,1000))) +
+  scale_x_continuous(breaks = seq(-3,7)*365,labels=seq(-3,7))
+  # geom_vline(aes(xintercept = peak_date))
+```
+
+
+```{r}
+df_CSUSHPINSA %>% 
+  ggplot(.,aes(x=index_diffdate,y=index,color=peak)) +
+  geom_line() +
+  # facet_wrap(~peak,ncol=1,scales="free_x") +
+  facet_wrap(~series_id,scales="free_y") +
+  # geom_text_repel(aes(label=label),nudge_x = 0, direction = "y", hjust = "left") +
+  geom_text(aes(label=label),nudge_x = 0, direction = "y", hjust = "left") +
+  scale_x_continuous(expand=expansion(add=c(0,1000))) +
+  geom_hline(yintercept = 100,linetype=2) +
+  geom_vline(xintercept = 0,linetype=2) +
+  scale_x_continuous(breaks = seq(-3,7)*365,labels=seq(-3,7))
+  # geom_vline(aes(xintercept = peak_date))
+```
+
 
